--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>uni.miskolc.ips.ilona</groupId>
 	<artifactId>ilona</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>ilona Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -26,8 +26,6 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- <dependency> <groupId>javax.servlet</groupId> <artifactId>jstl</artifactId> 
-			<version>1.2</version> <scope>provided</scope> </dependency> -->
 
 		<dependency>
 			<groupId>jstl</groupId>
@@ -35,7 +33,9 @@
 			<version>1.2</version>
 		</dependency>
 
-		<!-- Ilona dependencies -->
+		<!-- ILONA DEPENDENCIES-->
+		
+		<!--  Measurement Dependencies -->
 		<dependency>
 			<groupId>uni.miskolc.ips.ilona</groupId>
 			<artifactId>measurement-controller</artifactId>
@@ -51,7 +51,12 @@
 			<artifactId>measurement-persist-mysql</artifactId>
 			<version>0.1.2-SNAPSHOT</version>
 		</dependency>
-		<!--  
+		
+		<!-- END OF Measurement Dependencies -->
+		
+		<!--  Tracking Dependencies -->
+	
+		<!--
 		<dependency>
 			<groupId>uni.miskolc.ips.ilona</groupId>
 			<artifactId>tracking-controller</artifactId>
@@ -73,7 +78,46 @@
 			<artifactId>tracking-service-impl</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>-->
+		
+		<!-- END OF Tracking Dependencies -->
+		
+		
+		<!-- Positioning Dependencies -->
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>positioning-service-impl</artifactId>
+			<version>0.1.3-SNAPSHOT</version>
+		</dependency>
 
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>positioning-controller</artifactId>
+			<version>0.1.3-SNAPSHOT</version>
+		</dependency>
+		
+		
+		<!-- END OF Positioning Dependencies -->	
+		
+		<!-- Navigation Dependencies -->
+
+		<!--  
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>navigation-controller</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>navigation-persist-ontology</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>navigation-service-impl</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>-->
+		<!-- END OF Navigation Dependencies -->
+		
 		<!-- Spring dependencies -->
 
 		<dependency>
@@ -108,7 +152,7 @@
 			<artifactId>spring-security-ldap</artifactId>
 			<version>4.1.1.RELEASE</version>
 		</dependency>
-		<!-- Spring security dependencies -->
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
@@ -137,36 +181,8 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>4.3.1.RELEASE</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.webjars</groupId> <artifactId>bootstrap</artifactId> 
-			<version>3.3.6</version> </dependency> <dependency> <groupId>org.webjars</groupId> 
-			<artifactId>jquery</artifactId> <version>3.0.0</version> </dependency> -->
-		<dependency>
-			<groupId>uni.miskolc.ips.ilona</groupId>
-			<artifactId>positioning-service-impl</artifactId>
-			<version>0.1.3-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>uni.miskolc.ips.ilona</groupId>
-			<artifactId>positioning-controller</artifactId>
-			<version>0.1.2-SNAPSHOT</version>
-		</dependency>
-		<!--  
-		<dependency>
-			<groupId>uni.miskolc.ips.ilona</groupId>
-			<artifactId>navigation-controller</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>uni.miskolc.ips.ilona</groupId>
-			<artifactId>navigation-persist-ontology</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>uni.miskolc.ips.ilona</groupId>
-			<artifactId>navigation-service-impl</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>-->
+		
+		<!--  END OF Spring Dependencies -->
 	</dependencies>
 
 	<repositories>
